<?xml version="1.0" encoding="UTF-8"?>
<project
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
    xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

<!--
    Use /script/update-version.sh X.Y.Z
    to update all relevant poms and metadatas
-->

    <modelVersion>4.0.0</modelVersion>
    <groupId>ru.taximaxim.codeKeeper</groupId>
    <artifactId>ru.taximaxim.codeKeeper</artifactId>
    <version>${revision}</version>
    <packaging>pom</packaging>
    <modules>
        <module>ru.taximaxim.codekeeper.core</module>
        <module>ru.taximaxim.codekeeper.core.tests</module>
        <module>ru.taximaxim.codekeeper.ui</module>
        <module>ru.taximaxim.codekeeper.ui.tests</module>
        <module>ru.taximaxim.codekeeper.cli</module>
        <module>ru.taximaxim.codekeeper.cli.tests</module>
        <module>ru.taximaxim.codekeeper.mainapp</module>
        <module>ru.taximaxim.codekeeper.mainapp/feature</module>
        <module>ru.taximaxim.codekeeper.mainapp/updatesite</module>
        <module>ru.taximaxim.codekeeper.mainapp/product/rcp</module>
        <module>ru.taximaxim.codekeeper.mainapp/product/standalone</module>
        <module>ru.taximaxim.codekeeper.mainapp/deploy</module>
    </modules>

    <properties>
        <revision>8.2.0-SNAPSHOT</revision>

        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <tycho.version>2.7.5</tycho.version>
        <target.definition.file>app</target.definition.file>

        <sonar.language>java</sonar.language>
        <sonar.java.binaries>${project.build.directory}/classes</sonar.java.binaries>
        <sonar.java.source>11</sonar.java.source>
        <sonar.java.target>11</sonar.java.target>
        <sonar.core.coveragePlugin>jacoco</sonar.core.coveragePlugin>
        <sonar.junit.reportPath>${project.build.directory}/surefire-reports/</sonar.junit.reportPath>

        <keystore>/tmp/keystore.jks</keystore>
    </properties>

    <profiles>
        <profile>
            <id>jenkins</id>
            <properties>
                <target.definition.file>app_202103</target.definition.file>
            </properties>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-jarsigner-plugin</artifactId>
                        <version>3.0.0</version>
                        <configuration>
                            <keystore>${keystore}</keystore>
                            <alias>pgCodeKeeper</alias>
                            <storepass>pgCodeKeeper</storepass>
                            <keypass>pgCodeKeeper</keypass>
                            <arguments>
                                <argument>-sigalg</argument>
                                <argument>SHA512withRSA</argument>
                            </arguments>
                        </configuration>
                        <executions>
                            <execution>
                                <id>sign</id>
                                <goals>
                                    <goal>sign</goal>
                                </goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>internal</id>
            <modules>
                <module>../codekeeper-internal/ru.taximaxim.codekeeper.internal.tests</module>
            </modules>
        </profile>
        <profile>
            <id>compat_check</id>
            <properties>
                <target.definition.file>app_202103</target.definition.file>
            </properties>
        </profile>
    </profiles>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>3.0.0-M3</version>
                <executions>
                    <execution>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <rules>
                        <requireMavenVersion>
                            <version>3.6</version>
                        </requireMavenVersion>
                    </rules>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-compiler-plugin</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <release>11</release>
                </configuration>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>tycho-maven-plugin</artifactId>
                <version>${tycho.version}</version>
                <extensions>true</extensions>
            </plugin>

            <plugin>
                <groupId>org.eclipse.tycho</groupId>
                <artifactId>target-platform-configuration</artifactId>
                <version>${tycho.version}</version>
                <configuration>
                    <resolver>p2</resolver>
                    <target>
                        <artifact>
                            <groupId>ru.taximaxim.codeKeeper</groupId>
                            <artifactId>ru.taximaxim.codeKeeper</artifactId>
                            <version>${revision}</version>
                            <classifier>ru.taximaxim.codekeeper.mainapp/${target.definition.file}</classifier>
                        </artifact>
                    </target>
                    <pomDependencies>consider</pomDependencies>
                    <environments>
                        <environment>
                            <os>linux</os>
                            <ws>gtk</ws>
                            <arch>x86_64</arch>
                        </environment>
                    </environments>
                    <dependency-resolution>
                        <!-- workaround for split package import
                             allows apgdiff to not require any bundles -->
                        <extraRequirements>
                            <requirement>
                                <type>eclipse-plugin</type>
                                <id>org.eclipse.core.runtime</id>
                                <versionRange>[3.4.0,4.0.0)</versionRange>
                            </requirement>
                        </extraRequirements>
                    </dependency-resolution>
                </configuration>
            </plugin>
        </plugins>

        <pluginManagement>
            <plugins>
                <!-- disable default install and deploy goals globally -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-install-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>default-install</id>
                            <phase>none</phase>
                        </execution>
                    </executions>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-deploy-plugin</artifactId>
                    <executions>
                        <execution>
                            <id>default-deploy</id>
                            <phase>none</phase>
                        </execution>
                    </executions>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
